--- a/docs/notebooks/Fase 2.ipynb
+++ b/docs/notebooks/Fase 2.ipynb
@@ -950,9 +950,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:DL]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-DL-py"
   },
   "language_info": {
    "codemirror_mode": {
